2007-09-21  Sven Neumann  <sven@gimp.org>

	General fix for bug #478657:

	* libgimp/gimpaspectpreview.c
	* libgimp/gimpdrawablepreview.c
	* libgimp/gimpzoompreview.c: let all preview widgets store the
	state of the Preview toggle. Declared "toggle" parameter as unused.

	* plug-ins/common/*.c: pass NULL for "toggle" to
	gimp_drawable_preview_new() and gimp_aspect_preview_new().

2007-09-21  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppreview.c: formatting.

	* libgimpwidgets/gimpscrolledpreview.c: make use of freeze/thaw to
	reduce the number of updates during initialization.

2007-09-21  Sven Neumann  <sven@gimp.org>

	* app/file/file-open.c (file_open_image): set the image clean
	after handling the color profile.

2007-09-20  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.[ch]: added a load_proc member to GimpImage
	and getters and setters for it.

	* app/file/file-open.c (file_open_image): set the load procedure,
	but only if it hasn't been set already. Use the MIME type from the
	load procedure that is set on the image.

	* tools/pdbgen/pdb/fileops.pdb (file_load_invoker): set the load
	procedure. This causes it to be set when the URI plug-in calls
	gimp-file-load to load the image.

	* app/pdb/fileops_cmds.c: regenerated.

	* app/widgets/gimpimagepropview.c
	(gimp_image_prop_view_label_set_filetype): use the MIME type from
	the load procedure, in case that no save procedure is set.

2007-09-20  Sven Neumann  <sven@gimp.org>

	* app/gui/gui-vtable.c (gui_recent_list_add_uri): use
	"application/octet-stream" as MIME type in case that it is unset.

2007-09-20  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpegqual.c (quant_info): updated the table of
	known devices and software, work in progress.

2007-09-20  Michael Natterer  <mitch@gimp.org>

	* menus/image-menu.xml.in: added placeholder Edit/Preferences and
	move the preferences and keyboard shortcut dialogs there.

	* plug-ins/common/uniteditor.c (query): register the unit editor